--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Amedee Kirkpatrick",
   "license": "ISC",
   "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
     "express": "*",
     "nodemon": "^2.0.1",
     "socket.io": "*"
@@ -18,6 +19,9 @@
   "devDependencies": {
     "eslint": "^6.7.1",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
